fjord-compiler/test/errors/uniqueness/IllegalConst.fj
module errors.uniqueness.IllegalConst

illegalConst : String -* Int -> String
illegalConst x y =
  x

useIllegalConst : (Int -> String) -> (String, String)
useIllegalConst f =
  (f 0, f 0)

dup : String -* (String, String)
dup x = 
  useIllegalConst (illegalConst x)

myDup : (String, String)
myDup = 
  dup "hi"

